# stitch-rs

./: CITATION.cff  CNAME  README.md  WorkerMessageHandler.mjs  index.html  styles.css
ace/: ace_grammar.min.js
css/: styles.css
modules/: Sortable.mjs
rust/: .gitignore  Cargo.toml
rust/src/: fuse.rs  image.rs  main.rs  stitch2d.rs  stitch3d.rs
src/: Image.mjs
src/modules/: CanvasImageReader.mjs  EventEmitter.mjs  RangeTools.mjs  daikon.mjs  utif.mjs
src/ui/: Controller.mjs  GridStitchSetup.mjs  PaneCollection.mjs  ResizeablePanels.mjs  StitchVisualizer.mjs  TopControls.mjs  Viewer3D.mjs
src/utils/: FileUtils.mjs  Utils.mjs
src/worker/: ParallelImageParser.mjs  WorkerPool.mjs
ui/: Controller.mjs  LogTray.mjs
web/ace/: ace.js
web/css/: styles.css
web/src/: main.mjs
web/src/modules/: CanvasImageReader.mjs  utif.mjs
web/src/ui/: Controller.mjs  FileBrowser.mjs  GridStitchSetup.mjs  PaneCollection.mjs  StitchVisualizer.mjs  Viewer3D.mjs
web/src/worker/: FuseWorker.mjs  ImageParserWorker.mjs  WorkerMessageHandler.mjs
