[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dicom = "0.7.0"
egui = "0.28.1"
fft2d = "0.1.1"
rayon = "1.10.0"
rustfft = "6.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tiff = "0.9.1"
transpose = "0.2.3"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
